fix text align on landing page

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -32,7 +32,7 @@
     margin: auto;
 }
 
-.main :not(h1, h2, h3) {
+.main p, .main li {
     text-align: justify;
 }
 
